--- a/WebGL Builds/index.html
+++ b/WebGL Builds/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/WebGL Builds.data",
-        frameworkUrl: "Build/WebGL Builds.framework.js",
-        codeUrl: "Build/WebGL Builds.wasm",
+        dataUrl: "Build/WebGL Builds.data.gz",
+        frameworkUrl: "Build/WebGL Builds.framework.js.gz",
+        codeUrl: "Build/WebGL Builds.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "No Cure For Madness",
